message MessageSize {
    required fixed32 size = 1;
}
